Prevent flickering caused by changing svg height.

--- a/assets/css/charts.css
+++ b/assets/css/charts.css
@@ -5,6 +5,7 @@ svg {
   -moz-border-radius:    8px;
   -khtml-border-radius:  8px;
   border-radius:         8px;
+  visibility:         hidden;
 }
 
 .axis path,
